--- a/style.css
+++ b/style.css
@@ -34,3 +34,31 @@ h3 {
   font-size: 16px;
 
 }
+
+.landingBox {
+  background-color: white;
+  padding: 20px 20x;
+  display: inline-block;
+  border: solid lightgrey 15px;
+}
+
+.titleColor {
+  color: slateblue;
+}
+
+.landingImage {
+  float:left;
+  height: 200px
+}
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  /* padding: 0 4px; */
+}
+
+/* Create four equal columns that sits next to each other */
+.column {
+  flex: 25%;
+  max-width: 100px;
+  /* padding: 0 4px; */
+}
