--- a/style.css
+++ b/style.css
@@ -53,7 +53,8 @@ h3 {
 .row {
   display: flex;
   flex-wrap: wrap;
-  /* padding: 0 4px; */
+  width:100%
+  padding: 0 4px;
 }
 
 /* Create four equal columns that sits next to each other */
@@ -61,4 +62,17 @@ h3 {
   flex: 25%;
   max-width: 100px;
   /* padding: 0 4px; */
+}
+@media(min-width: 800px) {
+
+  .gridImage-md {
+    width:50%
+
+  }
+}
+
+@media(max-width: 800px) {
+  .gridImage-sm {
+    width:25%
+  }
 }
