--- a/style.css
+++ b/style.css
@@ -66,8 +66,14 @@ h3 {
 @media(min-width: 800px) {
 
   .gridImage-md {
-    width:50%
+    width:170px;
+  }
+}
 
+@media(min-width: 800px) {
+
+  .gridImage-md-c {
+    width:50%;
   }
 }
 
@@ -79,7 +85,7 @@ h3 {
 
 @media(max-width: 800px){
   .nav-stacked {
-    
+
   }
 }
 
@@ -95,4 +101,8 @@ h3 {
   margin-left: auto;
   margin-right: auto;
   width: 75%;
+}
+
+.imgAnchor {
+  display:inline;
 }
