--- a/style.css
+++ b/style.css
@@ -1,8 +1,5 @@
-/* Giving the body the specified background color, adding font sizes for the h1 and h3 elements we'll be using */
-body {
-  background: #f1f1f1;
-}
 
+/* specify font sizes for headers */
 h1 {
   font-size: 80px;
 }
@@ -11,6 +8,7 @@ h3 {
   font-size: 30px;
 }
 
+/* set style for home button */
 .homeButton {
   background-color: slateblue; /* Green */
   border: none;
@@ -23,6 +21,7 @@ h3 {
   border-radius: 10px;
 }
 
+/* set style for navigation bar buttons */
 .navButton {
   background-color: lightsteelblue; /* Green */
   border:none;
@@ -35,21 +34,17 @@ h3 {
 
 }
 
-.landingBox {
-  background-color: white;
-  padding: 40px 40x;
-  display: inline-block;
-  border: solid lightgrey 15px;
-}
-
+/* set color for title button */
 .titleColor {
   color: slateblue;
 }
 
+/* style for image on main page */
 .landingImage {
   float:left;
   height: 200px
 }
+
 .row {
   display: flex;
   flex-wrap: wrap;
@@ -61,34 +56,9 @@ h3 {
 .column {
   flex: 25%;
   max-width: 100px;
-  /* padding: 0 4px; */
-}
-@media(min-width: 800px) {
-
-  .gridImage-md {
-    width:170px;
-  }
 }
 
-@media(min-width: 800px) {
-
-  .gridImage-md-c {
-    width:50%;
-  }
-}
-
-@media(max-width: 800px) {
-  .gridImage-sm {
-    width:125px;
-  }
-}
-
-@media(max-width: 800px){
-  .nav-stacked {
-
-  }
-}
-
+ /* image caption style */
 .imageCaption {
   color: slateblue;
   text-align: center;
@@ -105,4 +75,46 @@ h3 {
 
 .imgAnchor {
   display:inline;
+}
+
+
+/* for pages larger than 800 px */
+@media (min-width: 800px) {
+  body {
+    background-color: lightgrey;
+  }
+
+  .landingBox {
+    background-color: white;
+    padding: 40px 40x;
+    display: inline-block;
+    border: solid lightgrey 15px;
+  }
+
+  .gridImage-md {
+    width:170px;
+  }
+
+  .gridImage-md-c {
+    width:50%;
+  }
+}
+
+/* for pages smaller than 800 px */
+@media (max-width: 800px) {
+  body {
+    background-color: white; 
+  }
+
+  .landingBox {
+    background-color: white;
+    padding: 40px 40x;
+    display: inline-block;
+    border: solid white 15px;
+  }
+
+  .gridImage-sm {
+    width:125px;
+  }
+
 }
